objects/CustomFolderDetails__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To hold ids for Agreements and Conditions of Custom Folder Structure</description>
    <fields>
        <fullName>FolderId__c</fullName>
        <label>FolderId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FolderName__c</fullName>
        <label>FolderName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentFolderId__c</fullName>
        <label>ParentFolderId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Folder Details</label>
</CustomObject>